[build-system]
requires = [
    "setuptools",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "wexample-helpers-api"
version = "0.0.17"
description = "Some python basic helpers for apis."
authors = [
    { name = "weeger", email = "contact@wexample.com" },
]
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pip-tools",
    "pytest",
    "requests",
    "wexample-helpers>=0.0.34",
    "wexample-prompt==0.0.33",
]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.license]
text = "MIT"

[project.urls]
homepage = "https://github.com/wexample/python-helpers-api"
