[build-system]
requires = [
    "setuptools",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "wexample-helpers-api"
version = "0.0.28"
description = "Some python basic helpers for apis."
authors = [
    { name = "weeger", email = "contact@wexample.com" },
]
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pydantic>=2,<3",
    "requests",
    "wexample-helpers",
    "wexample-prompt",
]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.license]
text = "MIT"

[project.urls]
homepage = "https://github.com/wexample/python-helpers-api"

[project.optional-dependencies]
dev = ["pytest"]
