[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "wexample-helpers-api"
version = "0.0.28"
description = "Some python basic helpers for apis."
authors = [
    { name = "weeger", email = "contact@wexample.com" },
]
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pydantic>=2,<3",
    "requests",
    "wexample-helpers==0.0.64",
    "wexample-prompt==0.0.43",
]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.license]
text = "MIT"

[project.urls]
homepage = "https://github.com/wexample/python-helpers-api"

[project.optional-dependencies]
dev = [
    "pytest",
]

[tool.pdm]
distribution = true

[tool.pdm.build]
includes = [
    "src/wexample_helpers_api/py.typed",
]
package-dir = "src"

[[tool.pdm.build.packages]]
include = "wexample_helpers_api"
from = "src"
